PEFT finetuning results

--- a/FLAN-T5_Full_FineTuning.ipynb
+++ b/FLAN-T5_Full_FineTuning.ipynb
@@ -883,27 +883,19 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Next Steps for Improvement\n",
+    "## Conclusion: Full Fine-Tuning of FLAN-T5\n",
     "\n",
-    "To further enhance the model's efficiency and performance, consider the following improvements:\n",
+    "In this notebook, we successfully fine-tuned **FLAN-T5** for dialogue summarization. \n",
     "\n",
-    "1. **Optimize Training**  \n",
-    "   - Use **LoRA/PEFT** to fine-tune fewer parameters efficiently.  \n",
-    "   - Reduce **sequence length** and **batch size** to lower memory usage.  \n",
-    "\n",
-    "2. **Use Better Hardware**  \n",
-    "   - Train on a **GPU cloud service (AWS, Google Colab, Kaggle)** for faster processing.\n",
-    "      \n",
-    "3. **Deploy and Test**  \n",
-    "   - Convert the model to **ONNX/TorchScript** for optimized inference.  \n"
+    "### **Key Takeaways:**\n",
+    "- **Zero-shot vs. Fine-Tuned Performance:**  \n",
+    "  - The fine-tuned model achieved **significant improvements** in ROUGE scores over zero-shot inference.  \n",
+    "- **Training Challenges:**  \n",
+    "  - Fine-tuning on **Mac M2 (`mps') took ~24 hours** even with dataset downsizing.  \n",
+    "- **Optimization Strategies:**  \n",
+    "  - Techniques like **LoRA/PEFT, quantization, and hyperparameter tuning** can improve efficiency."
    ],
    "id": "3e4713ab4ea11729"
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61b809f1",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
