--- a/FLAN-T5_Zero_Multishot_Inference.ipynb
+++ b/FLAN-T5_Zero_Multishot_Inference.ipynb
@@ -1069,8 +1069,8 @@
     "\n",
     "### **Next Steps**\n",
     "To fully explore fine-tuning, refer to the following notebooks:\n",
-    "- **[Placeholder: Full Fine-Tuning Notebook]**\n",
-    "- **[Placeholder: PEFT/LoRA Fine-Tuning Notebook]**\n",
+    "- **([`FLAN-T5_Full_FineTuning.ipynb`](./FLAN-T5_Full_FineTuning.ipynb))**\n",
+    "- **[`FLAN-T5_FineTuning_PEFT_LoRA.ipynb`](./FLAN-T5_FineTuning_PEFT_LoRA.ipynb))**\n",
     "\n",
     "These will provide an end-to-end implementation of full fine-tuning and **parameter-efficient fine-tuning (PEFT)** methods like **LoRA** to further enhance model performance.\n"
    ],
